# osb-firmware

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/ArduinoSound/src/: SDWaveFile.cpp  SDWaveFile.h
lib/SdFat/src/: SdFatConfig.h
ports/atmel-samd/asf4_conf/samd21/: hpl_i2s_config.h  peripheral_clk_config.h
ports/atmel-samd/osb.X/: AtmelStart.gpdsc  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h
ports/atmel-samd/osb.X/armcc/: Makefile
ports/atmel-samd/osb.X/config/: hpl_sercom_config.h
ports/atmel-samd/osb.X/examples/: driver_examples.c  driver_examples.h
ports/atmel-samd/osb.X/gcc/: Makefile
ports/atmel-samd/osb.X/hpl/i2s/: hpl_i2s.c
ports/atmel-samd/osb.X/nbproject/: Makefile-Default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-Default.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
ports/atmel-samd/osb.X/nbproject/private/: configurations.xml  private.xml
ports/atmel-samd21/: CMakeLists.txt
ports/atmel-samd21/ArduinoCore-samd/cores/arduino/: HardwareSerial.h  Uart.cpp
ports/atmel-samd21/ArduinoCore-samd/variants/mkrzero/: variant.cpp
src/: CMakeLists.txt  loop.cpp
